[package]
name = "bevy_landmass"
version = "0.3.0"
edition = "2021"

description = "A plugin for Bevy to handle navigation of AI characters."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/andriyDev/bevy_landmass"

categories = ["game-development"]
keywords = ["navigation", "pathfinding", "avoidance", "landmass", "bevy"]

[dependencies]
bevy = { version = "0.12.0", default-features = false }
glam = "0.24.2"
landmass = "0.2.0"

[features]
mesh-utils = ["bevy/bevy_render"]
