[package]
edition = "2021"
name = "landmass"
version = "0.4.0"

description = "A navigation system for video game characters to walk around levels."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/andriyDev/landmass"

categories = ["game-development"]
keywords = ["navigation", "system", "pathfinding", "avoidance"]

[dependencies]
dodgy_2d = "0.5.0"
glam = "0.25.0"
kdtree = "0.7.0"
ord_subset = "3.1.1"
rand = "0.8.5"
geo = "0.27.0"
