[package]
name = "bevy_landmass"
version = "0.9.0-dev"
edition = "2021"

description = "A plugin for Bevy to handle navigation of AI characters."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/andriyDev/landmass"

categories = ["game-development"]
keywords = ["navigation", "pathfinding", "avoidance", "landmass", "bevy"]

exclude = ["/assets"]

[lints.clippy]
type_complexity = "allow"

[dependencies]
bevy_app = "0.16.0-rc.1"
bevy_asset = "0.16.0-rc.1"
bevy_color = "0.16.0-rc.1"
bevy_ecs = "0.16.0-rc.1"
bevy_gizmos = "0.16.0-rc.1"
bevy_math = { version = "0.16.0-rc.1" }
bevy_mesh = { version = "0.16.0-rc.1", optional = true }
bevy_platform_support = "0.16.0-rc.1"
bevy_reflect = "0.16.0-rc.1"
bevy_time = "0.16.0-rc.1"
bevy_transform = "0.16.0-rc.1"
landmass = { path = "../landmass", version = "0.8.0-dev" }

[dev-dependencies]
bevy = "0.16.0-rc.1"
googletest = "0.13.0"

[features]
default = ["mesh-utils"]
mesh-utils = ["dep:bevy_mesh"]
debug-avoidance = ["landmass/debug-avoidance"]

[[example]]
name = "bevy_landmass_example"
path = "example/main.rs"
required-features = ["mesh-utils"]
