[package]
name = "bevy_landmass"
version = "0.9.0-dev"
edition = "2021"

description = "A plugin for Bevy to handle navigation of AI characters."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/andriyDev/landmass"

categories = ["game-development"]
keywords = ["navigation", "pathfinding", "avoidance", "landmass", "bevy"]

exclude = ["/assets"]

[lints.clippy]
type_complexity = "allow"

[dependencies]
bevy = { version = "0.15.0", default-features = false, features = [
  "bevy_asset",
  "bevy_gizmos",
] }
landmass = { path = "../landmass", version = "0.8.0-dev" }

[dev-dependencies]
bevy = "0.15.0"
googletest = "0.14.0"

[features]
default = ["mesh-utils"]
mesh-utils = ["bevy/bevy_render"]
debug-avoidance = ["landmass/debug-avoidance"]

[[example]]
name = "bevy_landmass_example"
path = "example/main.rs"
required-features = ["mesh-utils"]
