[package]
name = "bevy_landmass"
version = "0.10.0"
edition = "2024"

description = "A plugin for Bevy to handle navigation of AI characters."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/andriyDev/landmass"

categories = ["game-development"]
keywords = ["navigation", "pathfinding", "avoidance", "landmass", "bevy"]

exclude = ["/assets"]

[lints.clippy]
type_complexity = "allow"

[dependencies]
landmass = { path = "../landmass", version = "0.9.0", default-features = false }

bevy_app = { version = "0.16.0", default-features = false }
bevy_asset = { version = "0.16.0", default-features = false }
bevy_color = { version = "0.16.0", default-features = false }
bevy_ecs = { version = "0.16.0", default-features = false }
bevy_gizmos = { version = "0.16.0", default-features = false }
bevy_log = { version = "0.16.0", default-features = false }
bevy_math = { version = "0.16.0", default-features = false }
bevy_mesh = { version = "0.16.0", optional = true, default-features = false }
bevy_platform = { version = "0.16.0", default-features = false }
bevy_reflect = { version = "0.16.0", default-features = false }
bevy_time = { version = "0.16.0", default-features = false }
bevy_transform = { version = "0.16.0", default-features = false }

[dev-dependencies]
bevy = "0.16.0"
googletest = "0.14.2"

[features]
default = ["mesh-utils"]
mesh-utils = ["dep:bevy_mesh"]
debug-avoidance = ["landmass/debug-avoidance"]

[[example]]
name = "basic"
required-features = ["mesh-utils"]

[[example]]
name = "playground"
required-features = ["mesh-utils"]
