[package]
edition = "2021"
name = "landmass"
version = "0.6.0"

description = "A navigation system for video game characters to walk around levels."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/andriyDev/landmass"

categories = ["game-development"]
keywords = ["navigation", "system", "pathfinding", "avoidance"]

[dependencies]
dodgy_2d = "0.5.1"
glam = "0.28.0"
kdtree = "0.7.0"
ord_subset = "3.1.1"
geo = "0.28.0"
disjoint = "0.8.0"
slotmap = "1.0.7"
thiserror = "1.0"
