[package]
name = "landmass_oxidized_navigation"
version = "0.3.0-dev"
edition = "2021"

description = "An integration between bevy_landmass and oxidized_navigation for AI navigation."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/andriyDev/landmass"

categories = ["game-development"]
keywords = ["navigation", "oxidized", "navmesh", "landmass", "bevy"]

exclude = ["/assets"]

[lints.clippy]
type_complexity = "allow"

[dependencies]
bevy = { version = "0.15.0", default-features = false, features = [
  "bevy_asset",
] }
bevy_landmass = { version = "0.8.0" }
oxidized_navigation = "0.12.0"

[dev-dependencies]
bevy = "0.15.0"
bevy_rapier3d = "0.28.0"
oxidized_navigation = { version = "0.12.0", features = ["rapier"] }

[[example]]
name = "landmass_oxidized_navigation_example"
path = "example/main.rs"
