[package]
name = "landmass_rerecast"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_landmass = { version = "0.10", path = "../bevy_landmass" }

bevy_app = { version = "0.16", default-features = false }
bevy_asset = { version = "0.16", default-features = false }
bevy_ecs = { version = "0.16", default-features = false }
bevy_log = { version = "0.16", default-features = false }
bevy_math = { version = "0.16", default-features = false }
bevy_platform = { version = "0.16", default-features = false }

bevy_rerecast_core = { version = "0.2", default-features = false, features = [
    "bevy_asset",
] }

[dev-dependencies]
bevy = "0.16"
googletest = "0.14.2"
